Project meeting_protocol_system {
  database_type: "PostgreSQL"
  Note: '''
  Система ведения протоколов совещаний.

  Основные правила:
  1. Каждое совещание имеет ровно один протокол.
  2. Протокол содержит разделы и обсуждаемые вопросы.
  3. Обсуждение может быть только информационным.
  4. Обсуждение может завершаться одним или несколькими решениями.
  5. Решение может порождать одну или несколько задач.
  6. Каждая задача связана с обсуждаемым вопросом и решением.
  7. Задачи могут контролироваться на последующих совещаниях.
  '''
}

/* =========================================================
   СПРАВОЧНИКИ
   ========================================================= */

Enum meeting_type {
  PLANNED       [note: "Плановое совещание"]
  EXTRAORDINARY [note: "Внеплановое совещание"]
  WORKING       [note: "Рабочее совещание"]
  OTHER
}

Enum meeting_format {
  IN_PERSON
  VIDEO_CONFERENCE
  HYBRID
  OTHER
}

Enum protocol_status {
  DRAFT
  ON_APPROVAL
  APPROVED
  ARCHIVED
  CANCELLED
}

Enum participant_role {
  CHAIRPERSON  [note: "Председатель"]
  SECRETARY    [note: "Секретарь"]
  MEMBER       [note: "Основной участник"]
  INVITED      [note: "Приглашённый"]
  EXPERT
  OBSERVER
}

Enum attendance_status {
  PRESENT
  ABSENT
  PARTIALLY_PRESENT
  REMOTE
  NOT_CONFIRMED
}

Enum discussion_result_type {
  INFORMATION_ONLY [note: "Информационное обсуждение без решения"]
  DECISION_MADE    [note: "Принято одно или несколько решений"]
  POSTPONED        [note: "Рассмотрение отложено"]
  NO_DECISION      [note: "Обсуждение состоялось, решение не принято"]
}

Enum decision_status {
  DRAFT
  ADOPTED
  CANCELLED
  SUPERSEDED
}

Enum task_status {
  NOT_STARTED
  IN_PROGRESS
  BLOCKED
  ON_HOLD
  COMPLETED
  CANCELLED
  OVERDUE
}

Enum task_priority {
  LOW
  NORMAL
  HIGH
  CRITICAL
}

Enum review_result {
  NOT_REVIEWED
  ACCEPTED
  RETURNED_FOR_REVISION
  DEADLINE_EXTENDED
  CANCELLED
}

Enum reference_type {
  WEB_LINK
  DOCUMENT
  FILE
  EMAIL
  OTHER
}

/* =========================================================
   ОРГАНИЗАЦИОННАЯ СТРУКТУРА И ПОЛЬЗОВАТЕЛИ
   ========================================================= */

Table organizations {
  id bigint [pk, increment]

  name varchar(255) [not null]
  short_name varchar(100)
  external_code varchar(100)

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    name
    external_code [unique]
  }
}

Table departments {
  id bigint [pk, increment]

  organization_id bigint [not null, ref: > organizations.id]
  parent_department_id bigint [ref: > departments.id]

  name varchar(255) [not null]
  short_name varchar(100)

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    organization_id
    parent_department_id
    (organization_id, name) [unique]
  }
}

Table persons {
  id bigint [pk, increment]

  external_id varchar(100) [note: "Например, @ivanov"]
  full_name varchar(255) [not null]
  email varchar(255)
  phone varchar(50)

  organization_id bigint [ref: > organizations.id]
  department_id bigint [ref: > departments.id]

  position_name varchar(255)
  is_active boolean [not null, default: true]

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    external_id [unique]
    email [unique]
    organization_id
    department_id
    full_name
  }
}

/* =========================================================
   СОВЕЩАНИЯ И ПРОТОКОЛЫ
   ========================================================= */

Table meetings {
  id bigint [pk, increment]

  meeting_number varchar(50)
  title varchar(500) [not null]

  meeting_type meeting_type [not null, default: 'PLANNED']
  meeting_format meeting_format [not null, default: 'VIDEO_CONFERENCE']

  scheduled_start_at timestamptz [not null]
  scheduled_end_at timestamptz

  actual_start_at timestamptz
  actual_end_at timestamptz

  location varchar(500)
  conference_url text

  next_meeting_at timestamptz
  special_notes text

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    meeting_number
    scheduled_start_at
    meeting_type
  }
}

Table protocols {
  id bigint [pk, increment]

  meeting_id bigint [not null, unique, ref: > meetings.id]

  protocol_number varchar(50) [not null]
  protocol_date date [not null]

  status protocol_status [not null, default: 'DRAFT']

  title varchar(500)
  introductory_text text
  conclusion_text text

  approved_at timestamptz
  approved_by_person_id bigint [ref: > persons.id]

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    protocol_number [unique]
    protocol_date
    status
  }

  Note: '''
  UNIQUE meeting_id обеспечивает правило:
  одному совещанию соответствует не более одного протокола.
  Обязательность создания протокола для каждого совещания
  должна контролироваться бизнес-логикой системы.
  '''
}

/* =========================================================
   УЧАСТНИКИ СОВЕЩАНИЯ
   ========================================================= */

Table meeting_participants {
  id bigint [pk, increment]

  meeting_id bigint [not null, ref: > meetings.id]
  person_id bigint [not null, ref: > persons.id]
  full_name_snapshot varchar(255) [not null]

  participant_role participant_role [not null, default: 'MEMBER']
  attendance_status attendance_status [not null, default: 'NOT_CONFIRMED']

  attendance_start_at timestamptz
  attendance_end_at timestamptz

  position_snapshot varchar(255)
  department_snapshot varchar(255)
  organization_snapshot varchar(255)

  comment text

  created_at timestamptz [not null, default: `now()`]

  indexes {
    (meeting_id, person_id) [unique]
    meeting_id
    person_id
    attendance_status
  }

  Note: '''
  Поля *_snapshot сохраняют должность и подразделение участника
  на момент проведения совещания, даже если впоследствии
  организационная структура изменится.
  '''
}

/* =========================================================
   ПОВЕСТКА И СТРУКТУРА ПРОТОКОЛА
   ========================================================= */

Table agenda_items {
  id bigint [pk, increment]

  meeting_id bigint [not null, ref: > meetings.id]
  parent_agenda_item_id bigint [ref: > agenda_items.id]

  item_number varchar(30) [not null, note: "Например: 1, 1.1, 2.1"]
  title varchar(500) [not null]
  description text

  sort_order integer [not null]
  is_planned boolean [not null, default: true]

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (meeting_id, item_number) [unique]
    (meeting_id, sort_order)
    parent_agenda_item_id
  }

  Note: '''
  Иерархия agenda_items позволяет хранить:
  1. Разработка, тестирование, апробация
  1.1. Реализация требований ИБ
  1.2. Доступ к материалам по ALSE
  '''
}

/* =========================================================
   ОБСУЖДЕНИЯ
   ========================================================= */

Table discussions {
  id bigint [pk, increment]

  protocol_id bigint [not null, ref: > protocols.id]
  agenda_item_id bigint [not null, ref: > agenda_items.id]

  subject varchar(500) [not null, note: "Обсуждаемый вопрос"]
  discussion_text text

  result_type discussion_result_type [not null, default: 'INFORMATION_ONLY']
  sequence_number integer [not null, default: 1]

  started_at timestamptz
  ended_at timestamptz

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    protocol_id
    agenda_item_id
    (protocol_id, agenda_item_id, sequence_number) [unique]
    result_type
  }

  Note: '''
  Обсуждение является центральной сущностью протокола.

  Оно может:
  - быть информационным;
  - завершиться без решения;
  - быть отложено;
  - привести к одному или нескольким решениям.
  '''
}

Table discussion_speakers {
  id bigint [pk, increment]

  discussion_id bigint [not null, ref: > discussions.id]
  person_id bigint [not null, ref: > persons.id]

  speech_order integer
  speech_summary text

  created_at timestamptz [not null, default: `now()`]

  indexes {
    (discussion_id, person_id) [unique]
    discussion_id
    person_id
  }
}

/* =========================================================
   РЕШЕНИЯ
   ========================================================= */

Table decisions {
  id bigint [pk, increment]

  discussion_id bigint [not null, ref: > discussions.id]

  decision_number integer [not null]
  decision_text text [not null]

  status decision_status [not null, default: 'ADOPTED']
  adopted_at timestamptz

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (discussion_id, decision_number) [unique]
    discussion_id
    status
  }

  Note: '''
  У одного обсуждения может не быть решений.
  Если решения приняты, их может быть несколько.
  '''
}

/* =========================================================
   ЗАДАЧИ
   ========================================================= */

Table tasks {
  id bigint [pk, increment]

  task_code varchar(50) [not null, unique, note: "Например: 03-001"]

  decision_id bigint [not null, ref: > decisions.id]

  title varchar(500) [not null]
  description text

  responsible_person_id bigint [not null, ref: > persons.id]
  assigned_by_person_id bigint [ref: > persons.id]

  status task_status [not null, default: 'NOT_STARTED']
  priority task_priority [not null, default: 'NORMAL']

  assigned_at timestamptz [not null, default: `now()`]

  planned_start_date date
  planned_due_date date
  planned_due_text varchar(255) [
    note: "Для неформализованных сроков: 'после 27.07.2026', 'до отпуска'"
  ]

  actual_start_date date
  actual_completion_date date

  progress_percent integer [not null, default: 0]
  completion_result text
  current_comment text

  parent_task_id bigint [ref: > tasks.id]

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    task_code [unique]
    decision_id
    responsible_person_id
    status
    planned_due_date
    parent_task_id
  }

  Note: '''
  Каждая задача обязательно связана:
  - с обсуждаемым вопросом;
  - с принятым решением;
  - с ответственным исполнителем.

  Ограничения, которые необходимо реализовать в PostgreSQL
  дополнительными CHECK/TRIGGER:
  1. progress_percent должен быть от 0 до 100;
  2. actual_completion_date должна быть заполнена для COMPLETED;
  3. discussion задачи однозначно определяется через decision_id;
  4. actual_completion_date не должна предшествовать actual_start_date.
  '''
}

Table task_coexecutors {
  task_id bigint [not null, ref: > tasks.id]
  person_id bigint [not null, ref: > persons.id]

  role_description varchar(255)
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (task_id, person_id) [pk]
    person_id
  }
}

/* =========================================================
   ИСТОРИЯ ИСПОЛНЕНИЯ ЗАДАЧ
   ========================================================= */

Table task_status_history {
  id bigint [pk, increment]

  task_id bigint [not null, ref: > tasks.id]

  previous_status task_status
  new_status task_status [not null]

  changed_by_person_id bigint [ref: > persons.id]
  changed_at timestamptz [not null, default: `now()`]

  progress_percent integer
  comment text

  indexes {
    task_id
    changed_at
    new_status
  }
}

Table task_deadline_history {
  id bigint [pk, increment]

  task_id bigint [not null, ref: > tasks.id]

  previous_due_date date
  new_due_date date

  change_reason text [not null]
  changed_by_person_id bigint [ref: > persons.id]
  changed_at timestamptz [not null, default: `now()`]

  indexes {
    task_id
    changed_at
  }
}

/* =========================================================
   КОНТРОЛЬ ЗАДАЧ НА ПОСЛЕДУЮЩИХ СОВЕЩАНИЯХ
   ========================================================= */

Table task_reviews {
  id bigint [pk, increment]

  meeting_id bigint [not null, ref: > meetings.id]
  task_id bigint [not null, ref: > tasks.id]

  reviewed_status task_status [not null]
  reviewed_planned_due_date date
  reviewed_actual_completion_date date

  review_result review_result [not null, default: 'NOT_REVIEWED']
  comment text

  reviewed_by_person_id bigint [ref: > persons.id]
  reviewed_at timestamptz

  created_at timestamptz [not null, default: `now()`]

  indexes {
    (meeting_id, task_id) [unique]
    task_id
    reviewed_status
    review_result
  }

  Note: '''
  Таблица соответствует разделу:
  "Отметка о выполнении поручений с прошлого совещания".

  Она хранит снимок состояния задачи на момент конкретного совещания.
  Одна задача может контролироваться на нескольких последующих совещаниях.
  '''
}

/* =========================================================
   ССЫЛКИ И МАТЕРИАЛЫ
   ========================================================= */

Table discussion_references {
  id bigint [pk, increment]

  discussion_id bigint [not null, ref: > discussions.id]

  reference_type reference_type [not null, default: 'WEB_LINK']
  title varchar(500)
  uri text [not null]
  description text

  created_at timestamptz [not null, default: `now()`]

  indexes {
    discussion_id
    reference_type
  }
}

Table task_references {
  id bigint [pk, increment]

  task_id bigint [not null, ref: > tasks.id]

  reference_type reference_type [not null, default: 'WEB_LINK']
  title varchar(500)
  uri text [not null]
  description text

  created_at timestamptz [not null, default: `now()`]

  indexes {
    task_id
    reference_type
  }
}
